<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:id="@+id/wisata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rect_white"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:foreground="?attr/selectableItemBackground">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:src="@drawable/vector_wisata" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white_smoke" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/wisata"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/kuliner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rect_white"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:foreground="?attr/selectableItemBackground">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:src="@drawable/vector_kuliner" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white_smoke" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/kuliner"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/transportasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rect_white"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:foreground="?attr/selectableItemBackground">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:src="@drawable/vector_transportasi" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white_smoke" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/akses_transportasi"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>